Improved sim sharing component chaining
Added message for text fields
Added sim event messages
# 0.00.53 (63300) Apr 11, 2012
Switched from Pascals to kiloPascals
Move masses to front when dragging
Improved images for masses
# 0.00.52 (63247) Apr 10, 2012
Added images for masses
Added some sim sharing messages
Improved i18n
Removed minus signs from grid readouts
# 0.00.51 (63237) Apr 10, 2012
Pressure tab: Scene 3: Removed "masses" label
Pressure tab: Scenes 2-3: Added a label for the bottom grid line
# 0.00.50 (63218) Apr 9, 2012
Fluid Flow tab: Fixed: Reset all causes exceptions
Pressure tab: Switch back to scene 1 on "reset all"
Pressure tab: Trapezoid scene: Moved the drain down to center the slider in the space at the bottom
Pressure tab: Fixed: Align the "Grid" and "Ruler" Check boxes/text.  the Grid one should be moved right.
# 0.00.49 (63149) Apr 6, 2012
Pressure tab: Chamber scene: Fixed: Don't show dotted line on top of the mass if just removed
Pressure tab: Chamber scene: Added space between the masses
Pressure tab: Chamber scene: Tweak the masses so they don't protrude into the lower left chamber, while still showing a good variation for pressure and displaced fluid height
Pressure tab: Chamber scene: Make the opening taller so blocks don't protrude into the lower left chamber
Pressure tab: Trapezoid scene: Improved the drain faucet
Pressure tab: Added grid for scenes 2-3
Pressure tab: Fixed: Fluid Density slider has english/metric mixed up
For pascals, don’t show any decimal places because it already has enough precision
# 0.00.48 (63126) Apr 5, 2012
Pressure tab: Intro scene: Fixed: gravity not accounted for in 1st tab physics
Hide the speedometer needle when NaN
Made top-center be 1.0 atm for the pressure sensor
Fixed: There is extra space on the sensor toolbox
Fixed: Pressure sensor not centered
Pressure tab: Fixed: Sim freezes with using pressure sensor in 2nd tab
Pressure tab: Added needle pressure gauges